Fix #236 with legacy 'word-wrap' to be replaced by 'overflow-wrap'.

--- a/style/moodle-rtl.css
+++ b/style/moodle-rtl.css
@@ -16517,6 +16517,7 @@ textarea.searchform input[type="text"] {
 
 .block_myprofile .content .email {
   overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .block_news_items .content .newlink {
